tests/vertical-slice/reject/let_else_non_diverging.hew
//! Reject: a `let … else` whose else block does NOT diverge.
//!
//! The else block of a let-else runs on the failure path, where the Ok binder
//! is not bound. It must diverge (return/break/continue/`!`-typed). An else
//! that produces a value (here `0`) would fall through to an unbound binder, so
//! the checker rejects it with E_LET_ELSE_DOES_NOT_DIVERGE.

fn validate(s: string) -> Result<i64, string> {
    if s == "good" { Ok(1) } else { Err("bad") }
}

fn parse_one(s: string) -> i64 {
    let Ok(n) = validate(s) else { 0 };
    n
}

fn main() {
    let v = parse_one("good");
    println(f"{v}");
}
